crates/ferrum-interfaces/tests/ui/vnext/fail/trusted_completed_sequence_binding_is_not_deserialize.rs
use ferrum_interfaces::vnext::TrustedCompletedSequenceBinding;

fn decode(bytes: &[u8]) {
    let _: TrustedCompletedSequenceBinding = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
